# botTELEGRAM

./: .env  .env.example  app.py  config.py  main.py  migrate_to_supabase.py  pyproject.toml  questions.json  requirements.txt  set_webhook.py  supabase_config.py  telegram_bot.py  vercel.json  web_app.py
api/: index.py
bot/: handler.py  utils.py
cv_models/: Junior_cv_model.docx  Senior_cv_model.docx
data/: sent_emails.json
handlers/: admin_handlers.py  message_handlers.py  setup.py  user_handlers.py
utils/: decorators.py  email_utils.py  file_utils.py  linkedin_utils.py
